--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
         <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
             <div class="copy-right">
-              <p>© Small Business, Inc.</p>
+              <p>© Sak Bran | Information Technology Service.</p>
             </div>
           </div>
           <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 text-right">
@@ -439,7 +439,7 @@
         </div>
         <div class="row">
           <div class="col-12">
-            <p class="designed">Designed by <a href="https://www.position2.com/" target="_blank">Position2</a></p>
+            <p class="designed">Designed & Template by <a href="https://www.position2.com/" target="_blank">Position2</a></p>
           </div>
         </div>
       </div>
